last changes on mobile part-2 fixed some images size ,launch app text

--- a/src/pages/LandingPage/components/ArchitectureSection/ArchitectureSection.css
+++ b/src/pages/LandingPage/components/ArchitectureSection/ArchitectureSection.css
@@ -245,7 +245,7 @@
     height: 100%;
     max-height: 520px;
     margin-left: 0;
-    transform: scale(1.5);
+    transform: scale(1.3);
     transform-origin: center center;
     margin: 0 auto;
     object-fit: contain;
