--- a/src/pages/LandingPage/components/JobProgressSection/JobProgressSection.css
+++ b/src/pages/LandingPage/components/JobProgressSection/JobProgressSection.css
@@ -193,7 +193,7 @@
 
   .lp-6-job-card-container {
     width: 100%;
-    max-width: 325px;
+    max-width: 310px;
     height: 450px;
     margin: 0 auto;
     overflow: visible;
