--- a/src/pages/LandingPage/components/LedgerSection/LedgerSection.css
+++ b/src/pages/LandingPage/components/LedgerSection/LedgerSection.css
@@ -165,7 +165,7 @@
    .lp-3-ledger-container { 
     
     width: 100%;
-    max-width: 325px;
+    max-width: 310px;
     height: 400px;
     margin: 0 auto;
     overflow: visible;
