--- a/src/pages/LandingPage/components/PostJobSection/PostJobSection.css
+++ b/src/pages/LandingPage/components/PostJobSection/PostJobSection.css
@@ -156,7 +156,7 @@
   .lp-4-ledger-container { 
     
     width: 100%;
-    max-width: 325px;
+    max-width: 310px;
     height: 450px;
     margin: 0 auto;
     overflow: visible;
