--- a/src/pages/LandingPage/components/RevolutionSection/RevolutionSection.css
+++ b/src/pages/LandingPage/components/RevolutionSection/RevolutionSection.css
@@ -299,6 +299,6 @@
     /* margin-top: 8px; */
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(0.9);
   }
 }
